# plugin-architecture

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: PluginManager.h
include/plugins/: BasePlugin.h
include/plugins/CAN/: Can.h
include/plugins/USB/: Usb.h
scripts/: run.sh
src/: PluginManager.cpp  main.cpp
src/plugins/: BasePlugin.cpp  BasePlugin.h
src/plugins/CAN/: Can.cpp  Can.h
src/plugins/USB/: Usb.cpp  Usb.h  connect.cpp
